--- a/contact.html
+++ b/contact.html
@@ -1,242 +1,245 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <!-- Basic -->
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- Mobile Metas -->
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <!-- Site Metas -->
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
 
-<head>
-  <!-- Basic -->
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <!-- Mobile Metas -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+    <title>Lodge</title>
 
-  <title>Lodge</title>
+    <!-- slider stylesheet -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css"
+    />
 
-  <!-- slider stylesheet -->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
+    <!-- bootstrap core css -->
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
-  <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+    <!-- fonts style -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Baloo+Chettan|Poppins:400,600,700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Custom styles for this template -->
+    <link href="css/style.css" rel="stylesheet" />
+    <!-- responsive style -->
+    <link href="css/responsive.css" rel="stylesheet" />
+  </head>
 
-  <!-- fonts style -->
-  <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan|Poppins:400,600,700&display=swap" rel="stylesheet">
-  <!-- Custom styles for this template -->
-  <link href="css/style.css" rel="stylesheet" />
-  <!-- responsive style -->
-  <link href="css/responsive.css" rel="stylesheet" />
-</head>
+  <body class="sub_page">
+    <div class="hero_area">
+      <!-- header section strats -->
+      <header class="header_section">
+        <div class="container-fluid">
+          <nav class="navbar navbar-expand-lg custom_nav-container">
+            <a class="navbar-brand" href="index.html">
+              <span> SKY DIAMOND LIMITED </span>
+            </a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-toggle="collapse"
+              data-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
 
-<body class="sub_page">
-
-  <div class="hero_area">
-    <!-- header section strats -->
-    <header class="header_section">
-      <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg custom_nav-container ">
-          <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="">
-            <span>
-              Lodge
-            </span>
-          </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
-              <ul class="navbar-nav  ">
-                <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="about.html"> About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="jewellery.html">Jewellery </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact us</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Login</a>
-                </li>
-              </ul>
-
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <div
+                class="d-flex ml-auto flex-column flex-lg-row align-items-center"
+              >
+                <ul class="navbar-nav">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="index.html"
+                      >Home <span class="sr-only">(current)</span></a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="about.html"> About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact us</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Login</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="quote_btn-container">
+                <a href="">
+                  <img src="images/cart.png" alt="" />
+                  <div class="cart_number">0</div>
+                </a>
+                <form class="form-inline">
+                  <button
+                    class="btn my-2 my-sm-0 nav_search-btn"
+                    type="submit"
+                  ></button>
+                </form>
+              </div>
             </div>
-            <div class="quote_btn-container ">
-              <a href="">
-                <img src="images/cart.png" alt="">
-                <div class="cart_number">
-                  0
-                </div>
-              </a>
-              <form class="form-inline">
-                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
-              </form>
-            </div>
-          </div>
-        </nav>
-      </div>
-    </header>
-    <!-- end header section -->
-  </div>
-
-  <!-- contact section -->
-
-  <section class="contact_section layout_padding">
-    <div class="design-box">
-      <img src="images/design-2.png" alt="">
-    </div>
-    <div class="container ">
-      <div class="">
-        <h2 class="">
-          Contact Us
-        </h2>
-      </div>
-
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <form action="">
-            <div>
-              <input type="text" placeholder="Name" />
-            </div>
-            <div>
-              <input type="email" placeholder="Email" />
-            </div>
-            <div>
-              <input type="text" placeholder="Phone" />
-            </div>
-            <div>
-              <input type="text" class="message-box" placeholder="Message" />
-            </div>
-            <div class="d-flex ">
-              <button>
-                SEND
-              </button>
-            </div>
-          </form>
+          </nav>
         </div>
-        <div class="col-md-6">
-          <div class="map_container">
-            <div class="map-responsive">
-              <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Eiffel+Tower+Paris+France" width="600" height="300" frameborder="0" style="border:0; width: 100%; height:100%" allowfullscreen></iframe>
-            </div>
-          </div>
+      </header>
+      <!-- end header section -->
+    </div>
+
+    <!-- contact section -->
+
+    <section class="contact_section layout_padding">
+      <div class="design-box">
+        <img src="images/design-2.png" alt="" />
+      </div>
+      <div class="container">
+        <div class="">
+          <h2 class="">Contact Us</h2>
         </div>
       </div>
-    </div>
-  </section>
-
-  <!-- end contact section -->
-
-  <!-- info section -->
-  <section class="info_section ">
-    <div class="container">
-      <div class="info_container">
+      <div class="container">
         <div class="row">
-          <div class="col-md-3">
-            <div class="info_logo">
-              <a href="">
-                <img src="images/logo.png" alt="">
-                <span>
-                  Lodge
-                </span>
-              </a>
-            </div>
+          <div class="col-md-6">
+            <form action="">
+              <div>
+                <input type="text" placeholder="Name" />
+              </div>
+              <div>
+                <input type="email" placeholder="Email" />
+              </div>
+              <div>
+                <input type="text" placeholder="Phone" />
+              </div>
+              <div>
+                <input type="text" class="message-box" placeholder="Message" />
+              </div>
+              <div class="d-flex">
+                <button>SEND</button>
+              </div>
+            </form>
           </div>
-          <div class="col-md-3">
-            <div class="info_contact">
-              <a href="">
-                <img src="images/location.png" alt="">
-                <span>
-                  Address
-                </span>
-              </a>
+          <div class="col-md-6">
+            <div class="map_container">
+              <div class="map-responsive">
+                <iframe
+                  width="600"
+                  height="450"
+                  style="border: 0"
+                  loading="lazy"
+                  allowfullscreen
+                  referrerpolicy="no-referrer-when-downgrade"
+                  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=P.O+Box+KIA+3420,Airport+Accra,Ghana"
+                >
+                </iframe>
+              </div>
             </div>
-          </div>
-          <div class="col-md-3">
-            <div class="info_contact">
-              <a href="">
-                <img src="images/phone.png" alt="">
-                <span>
-                  +01 1234567890
-                </span>
-              </a>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="info_contact">
-              <a href="">
-                <img src="images/mail.png" alt="">
-                <span>
-                  demo@gmail.com
-                </span>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="info_form">
-          <div class="d-flex justify-content-center">
-            <h5 class="info_heading">
-              Newsletter
-            </h5>
-          </div>
-          <form action="">
-            <div class="email_box">
-              <label for="email2">Enter Your Email</label>
-              <input type="text" id="email2">
-            </div>
-            <div>
-              <button>
-                subscribe
-              </button>
-            </div>
-          </form>
-        </div>
-        <div class="info_social">
-          <div class="d-flex justify-content-center">
-            <h5 class="info_heading">
-              Follow Us
-            </h5>
-          </div>
-          <div class="social_box">
-            <a href="">
-              <img src="images/fb.png" alt="">
-            </a>
-            <a href="">
-              <img src="images/twitter.png" alt="">
-            </a>
-            <a href="">
-              <img src="images/linkedin.png" alt="">
-            </a>
-            <a href="">
-              <img src="images/insta.png" alt="">
-            </a>
           </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- end info_section -->
+    <!-- end contact section -->
 
-  <!-- footer section -->
-  <section class="container-fluid footer_section">
-    <p>
-      &copy; <span id="displayYear"></span> All Rights Reserved By
-      <a href="https://html.design/">Free Html Templates</a>
-    </p>
-  </section>
-  <!-- footer section -->
+    <!-- info section -->
+    <section class="info_section">
+      <div class="container">
+        <div class="info_container">
+          <div class="row">
+            <div class="col-md-3">
+              <div class="info_logo">
+                <a href="">
+                  <span style="margin-left: 30px"> SKY DIAMOND LIMITED</span>
+                </a>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="info_contact">
+                <a href="">
+                  <img src="images/location.png" alt="" />
+                  <span>P.O Box KIA 3420, Airport Accra, Ghana</span>
+                </a>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="info_contact">
+                <a href="">
+                  <img src="images/phone.png" alt="" />
+                  <span>+233 543021175 <br /> </span>
+                  <span style="margin-left: 25px">+233 546682748</span>
+                </a>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="info_contact">
+                <a href="">
+                  <img src="images/mail.png" alt="" />
+                  <span>amehjacob01@gmail.com</span><br />
+                  <span>amehjacob02@gmail.com</span>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="info_form">
+            <div class="d-flex justify-content-center">
+              <h5 class="info_heading">Newsletter</h5>
+            </div>
+            <form action="">
+              <div class="email_box">
+                <label for="email2">Enter Your Email</label>
+                <input type="text" id="email2" />
+              </div>
+              <div>
+                <button>Subscribe</button>
+              </div>
+            </form>
+          </div>
+          <div class="info_social">
+            <div class="d-flex justify-content-center">
+              <h5 class="info_heading">Follow Us</h5>
+            </div>
+            <div class="social_box">
+              <a href="">
+                <img src="images/fb.png" alt="" />
+              </a>
+              <a href="">
+                <img src="images/twitter.png" alt="" />
+              </a>
+              <a href="">
+                <img src="images/linkedin.png" alt="" />
+              </a>
+              <a href="">
+                <img src="images/insta.png" alt="" />
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-  <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap.js"></script>
-  <script type="text/javascript" src="js/custom.js"></script>
-</body>
+    <!-- footer section -->
+    <section class="container-fluid footer_section">
+      <p>
+        &copy; <span id="displayYear"></span> All Rights Reserved By
+        <a href="https://zulqarnain-haider-8311.vercel.app/"
+          >Zulqarnain Haider</a
+        >
+      </p>
+    </section>
 
+    <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.js"></script>
+    <script type="text/javascript" src="js/custom.js"></script>
+  </body>
 </html>
